# dataminer

./: .env_template  .gitignore  Dockerfile  README.md  pyproject.toml  scripts.py
dataminer/: azurehelper.py  items.py  middlewares.py  pipelines.py  scraperapi_settings.py  settings.py
dataminer/spiders/: ebay_spider.py  template_spider.py
